@@ -66,6 +66,8 @@ create view employees as
 
 GRANT select ON employees TO public;
 
+DROP TYPE IF EXISTS employee_result CASCADE;
+
 CREATE TYPE employee_result AS (
     entity_id int,
     person_id int,
@@ -82,7 +84,8 @@ CREATE TYPE employee_result AS (
     manager_first_name text,
     manager_last_name text,
     employeenumber varchar(32),
-    dob date
+    dob date,
+    country_id int
 );
 
 CREATE OR REPLACE FUNCTION employee__get
@@ -92,9 +95,10 @@ $$
    SELECT p.entity_id, p.id, s.salutation, 
           p.first_name, p.middle_name, p.last_name,
           ee.startdate, ee.enddate, ee.role, ee.ssn, ee.sales, ee.manager_id,
-          mp.first_name, mp.last_name, ee.employeenumber, ee.dob
+          mp.first_name, mp.last_name, ee.employeenumber, ee.dob, e.country_id
      FROM person p
      JOIN entity_employee ee on (ee.entity_id = p.entity_id)
+     JOIN entity e ON (p.entity_id = e.id)
 LEFT JOIN salutation s on (p.salutation_id = s.id)
 LEFT JOIN person mp ON ee.manager_id = p.entity_id
     WHERE p.entity_id = $1;
@@ -113,8 +117,9 @@ $$
 SELECT p.entity_id, p.id, s.salutation,
           p.first_name, p.middle_name, p.last_name,
           ee.startdate, ee.enddate, ee.role, ee.ssn, ee.sales, ee.manager_id,
-          mp.first_name, mp.last_name, ee.employeenumber, ee.dob
+          mp.first_name, mp.last_name, ee.employeenumber, ee.dob, e.country_id
      FROM person p
+     JOIN entity e ON p.entity_id = e.id
      JOIN entity_employee ee on (ee.entity_id = p.entity_id)
 LEFT JOIN salutation s on (p.salutation_id = s.id)
 LEFT JOIN person mp ON ee.manager_id = p.entity_id
